# atomic-red-team-mcp

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yaml  main.py  models.py  pyproject.toml  utils.py
.github/: dependabot.yml
.github/workflows/: manual-release.yml  pr-checks.yml  release.yml
docs/: ARCHITECTURE.md
docs/execution/: multiple-mcp.md
docs/installation/: windsurf.md
guides/: claude.md  code.md  cursor.md  other.md  windsurf.md
guides/execution/: multiple-mcp.md
guides/installation/: claude.md  code.md  cursor.md  gemini.md  other.md  windsurf.md
src/atomic_red_team_mcp/: __init__.py  __main__.py
src/atomic_red_team_mcp/models/: __init__.py  outputs.py
src/atomic_red_team_mcp/server/: app.py  prompts.py
src/atomic_red_team_mcp/services/: __init__.py  executor.py  indexer.py
src/atomic_red_team_mcp/tools/: __init__.py  execute_atomic.py  generate_atomic.py  query_atomics.py  refresh_atomics.py  server_info.py  validate_atomic.py
tests/: __init__.py  conftest.py  test_execute_atomic.py  test_imports.py  test_indexer.py  test_output_models.py  test_query_atomics.py  test_refresh_atomics.py  test_tools.py  test_validate_atomic.py
