[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomic-red-team-mcp"
version = "1.0.0"
description = "MCP server providing access to Atomic Red Team security tests with search, validation, and creation capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "cyberbuff" }
]
keywords = [
    "mcp",
    "atomic-red-team"
]
dependencies = [
    "mcp[cli]>=1.13.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/cyberbuff/atomic-red-team-mcp"
Documentation = "https://github.com/cyberbuff/atomic-red-team-mcp"
Repository = "https://github.com/cyberbuff/atomic-red-team-mcp"
Issues = "https://github.com/cyberbuff/atomic-red-team-mcp/issues"

[project.scripts]
atomic-red-team-mcp = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "/__pycache__",
    "/atomics",
    "/.git",
    "/.github",
    "/docker-compose.yaml",
    "/Dockerfile",
    "/guides",
]

[tool.hatch.build.targets.sdist]
include = [
    "/main.py",
    "/models.py",
    "/__init__.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
